cabal-version:      3.0
name:               OrderOrder
version:            0
synopsis:           A GHC plugin to enforce isolation of module prefices

-- A longer description of the package.
description:        See README.md                                       .
homepage:           https://github.com/fumieval/OrderOrder

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fumiaki Kinoshita
maintainer:         fumiexcel@gmail.com

-- A copyright notice.
copyright:          copyright (c) 2022 Fumiaki Kinoshita
category:           Compiler Plugin
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/fumieval/OrderOrder.git

executable orderorder
    main-is: OrderOrder.hs
    build-depends:
        base >=4.12 && <5,
        bytestring,
        directory,
        filepath,
        ghc,
        split,
        text,
        unordered-containers,
        containers,
        yaml,
        dotgen,
        optparse-applicative,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat
    default-extensions:
      ImportQualifiedPost
      DeriveTraversable